fix: use smaller border-width for grid cells when in dark mode

--- a/platform/dashboard/src/renderer/src/components/Grid/Cell.scss
+++ b/platform/dashboard/src/renderer/src/components/Grid/Cell.scss
@@ -31,6 +31,10 @@ $label-size: 0.5625rem;
   }
 }
 
+.pf-v5-theme-dark .codeflare--grid-cell {
+  border-width: 1px;
+}
+
 .codeflare--grid-cell {
   width: $size;
   height: $size;
